--- a/web/styles/table-view.css
+++ b/web/styles/table-view.css
@@ -1,10 +1,14 @@
+body {
+  margin: 10;
+  padding: 0;
+}
 
 /* toolbar styles */
 #toolbar {
   margin: 0px;
-  margin-top: 5px;
+  margin-top: 0px;
   padding: 0px;
-  padding-left: 15px;
+  padding-left: 0px;
   font-size: 10pt;
   font-weight: normal;
   display: inline-block;
@@ -20,9 +24,9 @@
 
 #toolbar-right {
   position: absolute;
-  top: 12px;
-  right: 5px;
-  width: 36px;
+  top: 5px;
+  right: 0px;
+  width: 32px;
   height: 32px;
   padding-left: 5px;
   background-color: var(--vscode-editor-background);
@@ -55,8 +59,9 @@
 	border-right: none;
 	border-bottom: 1px solid var(--vscode-panel-border);
 	border-radius: 0px;
-	margin-left: 15px;
-	margin-right: 15px;
+	margin-left: 0px;
+	margin-right: 0px;
+  height: calc(100% - 40);
 	overflow-x: hidden;
 }
 
