--- a/web/styles/table-view.css
+++ b/web/styles/table-view.css
@@ -1,6 +1,11 @@
 body {
   margin: 10;
   padding: 0;
+  color: var(--vscode-foreground);
+	font-size: var(--vscode-font-size);
+	font-weight: var(--vscode-font-weight);
+	font-family: var(--vscode-font-family);
+	background-color: var(--vscode-editor-background);
 }
 
 /* toolbar styles */
