--- a/web/styles/table-view.css
+++ b/web/styles/table-view.css
@@ -31,10 +31,13 @@ body {
   position: absolute;
   top: 5px;
   right: 0px;
-  width: 32px;
+  width: 110px;
   height: 32px;
   padding-left: 5px;
   background-color: var(--vscode-editor-background);
+	display: flex;
+	align-items: center;
+	gap: 5px;
 }
 
 #toolbar a {
