initial set of table paging UI config (#60)
- add paging and page sizes config to Tabulator setup in tableView.js
- change data loading page size to 100K in tableView.ts
- clear loading data status message when all data is read and total rows counter is set
- add starting CSS for the Tabulator footer row in table-view.css

--- a/web/styles/table-view.css
+++ b/web/styles/table-view.css
@@ -97,3 +97,7 @@ body {
 	background-color: var(--vscode-editor-background);
 	border: none;
 }
+
+.tabulator .tabulator-footer {
+	background-color: var(--vscode-editor-background);
+}
