add mock data loading in perspective view js (#65)
to verify perspective viewer scripts and styles loading

--- a/web/styles/perspective.css
+++ b/web/styles/perspective.css
@@ -1,1 +1,8 @@
 /** TODO: add Perspective Viewer styles **/
+perspective-viewer {
+  position: absolute;
+  top: 40px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
