set perspective viewer bg color to vscode editor bg for now (#80)
for the perspective viewer controls and filter panel to match vscode editor background color

--- a/web/styles/perspective.css
+++ b/web/styles/perspective.css
@@ -1,5 +1,6 @@
-/** TODO: add Perspective Viewer styles **/
+/** perspective viewer styles **/
 perspective-viewer {
+	background-color: var(--vscode-editor-background);
   position: absolute;
   top: 40px;
   left: 0;
