--- a/web/styles/table-view.css
+++ b/web/styles/table-view.css
@@ -30,13 +30,14 @@ body {
 #toolbar-right {
   position: absolute;
   top: 5px;
-  right: 0px;
+  right: 10px;
   width: 264px;
   height: 32px;
   padding-left: 5px;
   background-color: var(--vscode-editor-background);
 	display: flex;
 	align-items: center;
+  place-content: flex-end;
 	gap: 5px;
 }
 
